# api_signature_tester

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  next_step.md  pyproject.toml  requirement.txt
.github/workflows/: main.yml
config/: base.json  dev.json
docs/: ARCHITECTURE.md  config.md  tools.md
src/: main.py  request.csv
src/api_signature_tester/: config.py  main.py  request.csv
src/api_signature_tester/etl/: etl_csv.py  etl_source_data.py
src/api_signature_tester/pipeline/: sync_process.py
src/api_signature_tester/report/: markdown_report_generator.py
src/api_signature_tester/test/: test_endpoint.py
src/api_signature_tester/validator/: pipeline_api_validaror.py  pipeline_json_api.py  test_endpoint.py  validator_model.py
src/etl/: etl_csv.py  etl_source_data.py
src/report/: html_report_genetaror.py  markdown_report_generator.py  reporter.py
src/test/: test_endpoint.py
tests/api_signature_tester/etl/: test_etl_csv.py
tests/api_signature_tester/validator/: test_full_endpoint.py  test_pipeline_api_validaror.py  test_pipeline_json_api_validartor.py  test_test_endpoint.py
tests/etl/: test_etl_csv.py
