[project]
name = "api-signature-tester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepdiff>=8.6.1",
    "jmespath>=1.0.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.3",
    "snakeviz>=2.2.2",
    "types-requests>=2.32.4.20250913",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # lake8-bandit
    "S",
    # isort
    "I",
]

[tool.ruff.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
pythonpaths = [
    "src",
]

[tool.mypy]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "jmespath.*"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "api_signature_tester"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
